src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_queue_message_without_context.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                        "
"› Test                                  "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"  Identity planner (shift+tab to change)"
