src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__chat_composer__tests__footer_mode_esc_hint_from_overlay.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                           .----.   "
"                                                                                          ( @  @ )  "
"                                                                                          (______)  "
"                                                                                         /\/\/\/\\  "
"                                                                                            Echo    "
"› Ask Adam to do anything                                                                           "
"                                                                                                    "
"  esc esc to edit previous message                                                                  "
