src/tui/app/src/bottom_pane/snapshots/adam_tui__bottom_pane__chat_composer__tests__footer_mode_overlay_then_external_esc_hint.snap
---
source: src/tui/app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                           .----.   "
"                                                                                          ( @  @ )  "
"                                                                                          (______)  "
"                                                                                          /\/\/\/\\ "
"                                                                                            Echo    "
"› Ask Adam to do anything                                                                           "
"                                                                                                    "
"  esc again to edit previous message                                                                "
